--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
         "vue": "^2.6.12",
         "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "sweetalert2": "^11.4.6",
+        "toastr": "^2.1.4"
     }
 }
